discussion/kv_engine/156557/156557_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

Add mcbp_fuzz_test and mcbp_network_fuzz_test

mcbp_fuzz_test is a small test program which use libFuzzer
(https://llvm.org/docs/LibFuzzer.html) to test the package
validation code.

The program is not built by default, and you need to explicitly
add -DCB_FUZZSANITIZER=ON when invoking CMake (Note: you
should also be using clang and have libfuzzer available)

Once built it may be run with:

    ./mcbp_fuzz_test -max_len=32

(There isn't much value of larger values as the packet header
is the first 32 bytes).

To make sure that we run as much as the server code as possible
the signature for Cookie::validate() was changed to allow bypass
of logging and exceptions for illegal packets.

mcbp_network_fuzz_test is similar to mcbp_fuzz_test, but it'll
forward the packets to "localhost:11210" where you can run
memcached with address sanitizer and have it check everything
in the full context (currently it don't try to auth and select
bucket so you need "default bucket" configured if you want it
to try to execute the packets, but the odds of actually get
a correct packet is probably really low ;))

Change-Id: I74da642ce6f9623feb4598549418285e3ac5f12e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-30 07:06:16.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-30 07:37:50.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10316/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10: error: "subdoc/operations.h" file not found [clang-diagnostic-error]
#include <subdoc/operations.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10316/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10:
error: "subdoc/operations.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10316/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12371/ : FAILURE

Failure of GoogleTest "KVStoreParam/KVStoreParamTest.CompactAndScan/magma":

<pre>
[ RUN      ] KVStoreParam/KVStoreParamTest.CompactAndScan/magma
[2021-06-30T07:16:28.671Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:855: Failure
[2021-06-30T07:16:28.671Z] Failed
[2021-06-30T07:16:28.671Z] initBySeqnoScanContext returned nullptr
[2021-06-30T07:16:28.671Z] [  FAILED  ] KVStoreParam/KVStoreParamTest.CompactAndScan/magma, where GetParam() = "magma" (810 ms)
KVStoreParam/KVStoreParamTest.CompactAndScan/magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12371/ )

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12371/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37418/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31916/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8919/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10967/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12037/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11886/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19929/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
